--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         ]
     },
     "devDependencies": {
+        "@svgr/webpack": "^8.0.1",
         "@typescript-eslint/eslint-plugin": "^5.61.0",
         "@typescript-eslint/parser": "^5.61.0",
         "autoprefixer": "^10.4.14",
@@ -67,6 +68,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "file-loader": "^6.2.0",
         "husky": "4",
         "lint-staged": "^13.2.3",
         "postcss": "^8.4.24",
